Fixed barely visible input text

--- a/lite/lite.css
+++ b/lite/lite.css
@@ -125,6 +125,7 @@ button:hover {
   display: block;
   border: 1px solid skyblue;
   border-radius: 3px;
+  color: black;
 }
 
 #newPost textarea, #editPost textarea {
@@ -134,6 +135,7 @@ button:hover {
   border: 1px solid skyblue;
   border-radius: 3px;
   resize: vertical;
+  color: black;
 }
 
 #newPost button, #editPost button {
